# gia_nha_thu_do

./: .gitignore  DATA_GOVERNANCE_INTEGRATION_SUMMARY.md  Dockerfile  GEMINI.md  LICENSE  POLYGON_VISUALIZATION_BUGS_ANALYSIS.md  PROJECT_CLEANUP_SUMMARY.md  PULL_REQUEST.md  README.md  STATUS_REPORTING_IMPLEMENTATION_SUMMARY.md  check_database_contents.py  check_db_status.py  commit_message.txt  coordinate_validation_report_20250721_025009.md  create_improved_property_polygon_visualization.py  create_property_polygon_visualization.py  create_property_polygon_visualization_with_monitoring.py  debug_data.py  debug_spatial_join.py  demo_config_management.py  demo_status_reporting.py  docker-compose.cluster.yml  docker-compose.yml  export_sample_data.py  fix_integration_tests.py  fix_polygon_geometries.py  hello.py  oikotie_cron.txt  postal_code_coords.json  prepare_geospatial_data.py  prepare_road_data.py  prepare_topographic_data.py  pyproject.toml  real_estate_listings_detailed.json  run_bug_prevention_test.py  run_daily_cron.sh  run_espoo_validation.py  run_integration_tests.py  run_workflow.py  setup_windows_task.bat  (+11 more)
.clinerules/: data-governance-open-apis.md  database-management.md  documentation-maintenance.md  error-documentation-system.md  git-workflow.md  memory-bank-workflow.md  new-task-handoff.md  progressive-validation-strategy.md  temporary-script-execution.md  testing-workflow.md
.kiro/settings/: mcp.json
config/: config.json  development_config.json  production_config.json  security_config.template.json
docker/: backup-script.sh  build-secure.ps1  nginx.conf  prometheus.yml  security-scan.sh
docs/: DASHBOARD.md  MONITORING_WORKFLOW.md  NEXT_STEPS.md  cluster-coordination.md  configuration-management.md  multi-city-automation.md
k8s/: backup-cronjob.yaml  monitoring-configs.yaml  monitoring.yaml  namespace.yaml  redis.yaml  scraper-cluster.yaml  secrets.yaml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
notebooks/: check_data.ipynb  explore_open_data.ipynb  inspect_gml_data.ipynb  visualize_helsinki_properties.ipynb
oikotie/: geolocation.py  road_data.py  scraper.py  utils.py  wms.py
oikotie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
quickcheck/: osm_building_pipeline.py  osm_buildings_step1.py  osm_geofabrik_pipeline.py  osm_helsinki_research.py  phase3c1_district_tolerance_analysis.py  phase3c2_custom_tolerance_implementation.py  phase3c3_edge_case_analysis.py  validate_100_comprehensive_osm.py  validate_10_listings_osm.py  validate_full_helsinki_osm.py  validate_postal_osm.py
results/: automation_results_20250721_005457.json  automation_stats_20250721_005457.json  automation_summary_20250721_005457.txt
scripts/: apply_multi_city_migration.py  run_espoo_geospatial_integration.py  validate_espoo_geospatial.py
tests/: test_cluster_coordination.py  test_config_management.py  test_dashboard.py  test_deployment_manager.py  test_enhanced_orchestrator.py  test_enhanced_orchestrator_simple.py  test_espoo_dashboard.py  test_espoo_geospatial_integration.py  test_geolocation.py  test_multi_city_automation.py  test_multi_city_bug_prevention.py  test_multi_city_database_schema.py  test_scheduler.py  test_scraper.py  test_security_system.py  test_status_reporting_system.py
wms_fetcher/: pyproject.toml
wms_fetcher/src/: client.py
(+226 files in other folders)
