[project]
name = "oikotie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "beautifulsoup4>=4.13.4",
    "duckdb>=1.3.1",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "loguru>=0.7.3",
    "marimo>=0.14.9",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "selenium>=4.33.0",
]
