[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oikotie"
version = "0.1.0"
description = "A web scraper and data analysis dashboard for Oikotie.fi."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "duckdb>=0.10.0",
    "loguru>=0.7.2",
    "pandas>=2.2.0",
    "selenium>=4.18.0",
    "marimo>=0.4.3",
    "geopy>=2.4.1",
    "folium>=0.15.1",
    "scipy>=1.12.0",
    "branca>=0.7.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["oikotie*"]
exclude = ["tests*", "output*", "logs*", "debug*"]

[project.scripts]
scrape = "oikotie.scraper:main"

