[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oikotie"
version = "0.1.0"
description = "A web scraper and data analysis dashboard for Oikotie.fi."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "duckdb>=0.10.0",
    "loguru>=0.7.2",
    "pandas>=2.2.0",
    "selenium>=4.18.0",
    "geopy>=2.4.1",
    "folium>=0.15.1",
    "scipy>=1.12.0",
    "branca>=0.7.1",
    "geopandas>=0.14.4",
    "fiona>=1.9.6",
    "contextily>=1.5.0",
    "geodatasets>=2023.5.0",
    "ipython>=8.18.1",
    "ipykernel>=6.29.5",
    "osmnx>=2.0.5",
    "scikit-learn>=1.6.1",
    "plotly>=6.2.0",
    "httpx>=0.27.0",
    "OWSLib>=0.30.0",
    "pyarrow>=15.0.0",
    "psutil>=7.0.0",
    "redis>=6.2.0",
    "flask>=3.1.1",
    "watchdog>=6.0.0",
    "croniter>=1.4.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
]
automation = [
    "flask>=3.0.0",
    "redis>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["oikotie*"]
exclude = ["tests*", "output*", "logs*", "debug*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[project.scripts]
scrape = "oikotie.scraper:main"
