[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wms_fetcher"
version = "0.1.0"
description = "A client for interacting with Web Map Service (WMS) endpoints."
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27.0",
    "OWSLib>=0.30.0",
]

[tool.setuptools.packages.find]
where = ["src"]
